# CGo

./: .gitignore  CMakeLists.txt  README.md  a.out  error.hpp  main.cpp
include/: channel.hpp  defer.hpp  error.hpp  waitGroup.hpp
src/: main.cpp
test/: test.cpp
